# lite_rt_for_flutter_libs

./: .gitignore  .gitmodules  README  README.md  build_desktop_libs.sh  build_tf_lite_flex_delegate_linux.sh  build_tf_lite_flex_delegate_mac.sh  build_tf_lite_flex_delegate_windows.sh  build_tf_lite_gpu_delegate_linux.sh  build_tf_lite_gpu_delegate_mac.sh  build_tf_lite_linux.sh  build_tf_lite_mac.sh  build_tf_lite_windows.bat  build_tf_lite_windows.sh  ffigen.yaml  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: build_macos.yml  build_macos_libs.yml  build_ubuntu.yml  build_windows.yml
android/: build.gradle
base/: build_tf_lite_linux.sh  build_tf_lite_mac.sh  build_tf_lite_windows.sh
base/lite_rt_for_flutter_libs/: pubspec.yaml
base/lite_rt_for_flutter_libs_android/: README.md  ffigen.yaml  pubspec.yaml
base/lite_rt_for_flutter_libs_ios/: .metadata  README.md  ffigen.yaml  pubspec.yaml
base/lite_rt_for_flutter_libs_ios/src/: CMakeLists.txt  lite_rt_for_flutter_libs_ios.c
base/lite_rt_for_flutter_libs_linux/: .metadata  README.md  ffigen.yaml  pubspec.yaml
base/lite_rt_for_flutter_libs_linux/linux/: CMakeLists.txt
base/lite_rt_for_flutter_libs_linux/src/: CMakeLists.txt  lite_rt_for_flutter_libs_linux.c
base/lite_rt_for_flutter_libs_macos/: .metadata  README.md  ffigen.yaml  pubspec.yaml
base/lite_rt_for_flutter_libs_web_tfjs_tflite/: README.md  pubspec.yaml
base/lite_rt_for_flutter_libs_windows/: .metadata  README.md  ffigen.yaml  pubspec.yaml
base/lite_rt_for_flutter_libs_windows/src/: CMakeLists.txt  lite_rt_for_flutter_libs_windows.c
base/lite_rt_for_flutter_libs_windows/windows/: CMakeLists.txt
coreml/: build_tf_lite_mac.sh
coreml/lite_rt_for_flutter_libs_core_ml_delegate/: README.md  ffigen.yaml
coreml/lite_rt_for_flutter_libs_coreml_delegate_ios/: README.md  pubspec.yaml
coreml/lite_rt_for_flutter_libs_coreml_delegate_macos/: README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/linux/: CMakeLists.txt
example/windows/: CMakeLists.txt
flex/: build_tf_lite_flex_delegate_linux.sh  build_tf_lite_flex_delegate_mac.sh  build_tf_lite_flex_delegate_windows.sh
flex/lite_rt_for_flutter_libs_flex_delegate/: README.md  pubspec.yaml
flex/lite_rt_for_flutter_libs_flex_delegate_android/: README.md  ffigen.yaml  pubspec.yaml
flex/lite_rt_for_flutter_libs_flex_delegate_ios/: README.md  pubspec.yaml
flex/lite_rt_for_flutter_libs_flex_delegate_linux/: README.md  pubspec.yaml
flex/lite_rt_for_flutter_libs_flex_delegate_macos/: README.md  pubspec.yaml
flex/lite_rt_for_flutter_libs_flex_delegate_windows/: README.md  pubspec.yaml
github/workflows/: build_macos_libs.yml
gpu/: build_tf_lite_gpu_delegate_linux.sh  build_tf_lite_gpu_delegate_mac.sh  build_tf_lite_gpu_delegate_windows.sh
gpu/lite_rt_for_flutter_libs_gpu_delegate/: ffigen.yaml  pubspec.yaml
gpu/lite_rt_for_flutter_libs_gpu_delegate_android/: README.md  pubspec.yaml
gpu/lite_rt_for_flutter_libs_gpu_delegate_ios/: README.md  pubspec.yaml
gpu/lite_rt_for_flutter_libs_gpu_delegate_linux/: README.md  pubspec.yaml
gpu/lite_rt_for_flutter_libs_gpu_delegate_macos/: README.md  pubspec.yaml
gpu/lite_rt_for_flutter_libs_gpu_delegate_windows/: README.md  ffigen.yaml  pubspec.yaml
lib/: lite_rt_for_flutter_libs.dart  lite_rt_for_flutter_libs_bindings_generated.dart
lite_rt_for_flutter_libs/: README.md  pubspec.yaml
lite_rt_for_flutter_libs/android/: build.gradle  settings.gradle
lite_rt_for_flutter_libs/ios/: lite_rt_for_flutter_libs.podspec
lite_rt_for_flutter_libs/lib/: lite_rt_for_flutter_libs.dart
lite_rt_for_flutter_libs/linux/: CMakeLists.txt
lite_rt_for_flutter_libs/macos/: lite_rt_for_flutter_libs.podspec
lite_rt_for_flutter_libs_core_ml/: README.md  pubspec.yaml
lite_rt_for_flutter_libs_core_ml/test/: widget_test.dart
lite_rt_for_flutter_libs_core_ml_delegate/: .metadata  pubspec.yaml
lite_rt_for_flutter_libs_core_ml_delegate/example/: pubspec.yaml
lite_rt_for_flutter_libs_core_ml_delegate/ios/: lite_rt_for_flutter_libs_core_ml_delegate.podspec
lite_rt_for_flutter_libs_core_ml_delegate/lib/: lite_rt_for_flutter_libs_core_ml_delegate.dart  lite_rt_for_flutter_libs_core_ml_delegate_bindings_generated.dart
lite_rt_for_flutter_libs_core_ml_delegate/macos/: lite_rt_for_flutter_libs_core_ml_delegate.podspec
lite_rt_for_flutter_libs_flex_delegate/: ffigen.yaml  pubspec.yaml
lite_rt_for_flutter_libs_flex_delegate/android/: build.gradle  settings.gradle
lite_rt_for_flutter_libs_flex_delegate/example/: pubspec.yaml
lite_rt_for_flutter_libs_flex_delegate/ios/: lite_rt_for_flutter_libs_flex_delegate.podspec
lite_rt_for_flutter_libs_flex_delegate/lib/: lite_rt_for_flutter_libs_flex_delegate_bindings_generated.dart
lite_rt_for_flutter_libs_flex_delegate/linux/: CMakeLists.txt
lite_rt_for_flutter_libs_flex_delegate/windows/: CMakeLists.txt
lite_rt_for_flutter_libs_gpu/: README.md  pubspec.yaml
lite_rt_for_flutter_libs_gpu/linux/: CMakeLists.txt
lite_rt_for_flutter_libs_gpu/test/: widget_test.dart
lite_rt_for_flutter_libs_gpu/windows/: CMakeLists.txt
lite_rt_for_flutter_libs_gpu_delegate/: README.md
lite_rt_for_flutter_libs_gpu_delegate/android/: build.gradle  settings.gradle
lite_rt_for_flutter_libs_gpu_delegate/example/: README.md  pubspec.yaml
lite_rt_for_flutter_libs_gpu_delegate/ios/: lite_rt_for_flutter_libs_gpu_delegate.podspec
lite_rt_for_flutter_libs_gpu_delegate/lib/: lite_rt_for_flutter_libs_gpu_delegate.dart  lite_rt_for_flutter_libs_gpu_delegate_bindings_generated.dart
lite_rt_for_flutter_libs_gpu_delegate/linux/: CMakeLists.txt
lite_rt_for_flutter_libs_gpu_delegate/macos/: lite_rt_for_flutter_libs_gpu_delegate.podspec
lite_rt_for_flutter_libs_gpu_delegate/src/: CMakeLists.txt  lite_rt_for_flutter_libs_gpu_delegate.c
lite_rt_for_flutter_libs_gpu_delegate/windows/: CMakeLists.txt
liter_rt_for_flutter_libs/: README.md  ffigen.yaml  pubspec.yaml
liter_rt_for_flutter_libs/src/: CMakeLists.txt  liter_rt_for_flutter_libs.c
src/: CMakeLists.txt  lite_rt_for_flutter_libs.c
(+229 files in other folders)
